fix: Scrollbar would not push content

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -11,8 +11,6 @@ h4
 
 html, body
     +medium-screen()
-        min-height 100vh
-        overflow auto
         overflow-x hidden
 
 +small-screen()
